<resources>
    <string name="app_name">WhatsApp</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="image_whatsapp">Image WhatsApp</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="image_new_user">Image New User</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="edit_image">Edit Image</string>
    <string name="this_is_not_your_username_or_password_this_will_be_the_name_that_is_visible_to_your_contacts_in_whatsapp">This is not your username or password. This will be the name that is visible to your contacts in WhatsApp.</string>
    <string name="image_pictures">Image Pictures</string>
    <string name="image_camera">Image Camera</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="nuno_valente">Nuno Valente</string>
    <string name="hello">Hello</string>
    <string name="imagechat">ImageChat</string>
    <string name="username">Username</string>
    <string name="last_message">Last Message</string>
    <string name="title_activity_group_acivity">GroupAcivity</string>
    <string name="title_activity_register_group">RegisterGroupActivity</string>
    <string name="give_your_group_a_name_and_choose_an_optional_photo">Give your group a name and choose an optional photo!</string>
    <string name="group_name">Group Name</string>
    <string name="participants">Participants: 0</string>
</resources>
