<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">

    <include layout="@layout/toolbar_settings"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEEEEE">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageContacts"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginEnd="91dp"
            android:layout_marginRight="91dp"
            android:src="@drawable/padrao"
            app:civ_border_color="#EEEEEE"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.31"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/this_is_not_your_username_or_password_this_will_be_the_name_that_is_visible_to_your_contacts_in_whatsapp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageContacts">

            <EditText
                android:id="@+id/editSettingsName"
                android:layout_width="355dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <ImageView
                android:id="@+id/imageSaveName"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:contentDescription="@string/edit_image"
                app:srcCompat="@drawable/ic_edit" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/imageOpenCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_camera"
            app:layout_constraintBottom_toBottomOf="@+id/circleImageContacts"
            app:layout_constraintEnd_toStartOf="@+id/imageOpenPhotos"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/circleImageContacts"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_photo_camera" />

        <ImageButton
            android:contentDescription="@string/image_pictures"
            android:id="@+id/imageOpenPhotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/circleImageContacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageOpenCamera"
            app:layout_constraintTop_toTopOf="@+id/circleImageContacts"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_photo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>